<resources>
    <string name="app_name">K22411CSampleProject</string>
    <string name="title_login_user_name">User name:</string>
    <string name="title_login_user_name_hint">Enter your user name</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_password_hint">Enter your password</string>
    <string name="title_login_save_login_infor">Save login information</string>
    <string name="title_login_button_login">Login</string>
    <string name="title_login_fair_message">Login failed - please check your account again!</string>
    <string name="confirm_exit_title">Exit confirmation</string>
    <string name="confirm_exit_message">Are you sure you want to exit?</string>
    <string name="confirm_exit_yes">YES</string>
    <string name="confirm_exit_no">NO</string>
    <string name="title_employee">Employee</string>
    <string name="title_customer">Customer</string>
    <string name="title_emp_healthcare">Health Care</string>
    <string name="title_emp_salary">Salary</string>
    <string name="title_emp_healthcare_text">Employee HealthCare</string>
    <string name="title_emp_healthcare_height">Height:</string>
    <string name="title_emp_healthcare_weight">Weight:</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_slim">Slim</string>
    <string name="title_normal">Normal</string>
    <string name="title_fat">Fat</string>
    <string name="title_product">Product</string>
    <string name="title_category">Category</string>
    <string name="title_advanced_product">Advanced Product</string>
    <string name="title_new_customer">New Customer</string>
    <string name="title_broadcast_advertising">Broadcast Advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer Detail</string>
    <string name="title_customer_id">Customer ID:</string>
    <string name="title_customer_name">Customer Name:</string>
    <string name="title_customer_email">Customer Email:</string>
    <string name="title_customer_phone">Customer Phone:</string>
    <string name="title_new">New</string>
    <string name="title_save">Save</string>
    <string name="title_remove">Remove</string>
    <string name="title_new_product">New Product</string>
    <string name="title_product_id">Product ID:</string>
    <string name="title_product_name">Product Name:</string>
    <string name="title_product_quantity">Product Quantity</string>
    <string name="title_product_price">Product Price:</string>
    <string name="title_product_cate_id">Product CateID:</string>
    <string name="title_product_description">Product Description:</string>
    <string name="title_product_image_id">Product ImageID:</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_payment">Payment</string>
    <string name="title_order">Order</string>
    <string name="title_telephony">Telephony</string>
    <string name="title_contact_name">Contact Name:</string>
    <string name="title_phone_number">Phone Number:</string>
    <string name="title_body">Body:</string>
    <string name="title_handle_send_message">HANDLE SEND MESAGE</string>
    <string name="title_handle_post_message">HANDLE POST MESSAGE</string>
    <string name="title_asynctask">ASYNCTASK</string>
    <string name="title_draw">DRAW</string>
    <string name="title_multi_threading">MultiThreading</string>
    <string name="title_number_of_customer">Number of customer:</string>
    <string name="title_load_customer">LOAD CUSTOMER</string>
    <string name="title_contact">Contact</string>
</resources>