<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E3F2FD"
    tools:context=".SendSMSActivity">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_contact_name"
        android:textColor="#1A5D92"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/txtTelephonyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#03A9F4"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_phone_number"
        android:textColor="#1A5D92"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtTelephonyNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#03A9F4"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="#03A9F4"
        android:text="@string/title_body"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtBody"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgSendSms1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_send_sms" />

        <ImageView
            android:id="@+id/imgSendSms2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_send_sms_2" />
    </LinearLayout>

</LinearLayout>